--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ name = "sengpt"
 version = "0.1.0"
 description = "ChatGPT in your terminal, no OpenAI API key required"
 authors = ["SenZmaKi <senzmaki@gmail.com>"]
-license = "MIT"
+license = "GPL v3.0"
 homepage = "https://github.com/SenZmaKi/Sengpt"
 readme = "README.md"
 repository = "https://github.com/SenZmaKi/Sengpt"
